--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <title>React App</title>
+    <style>
+    .app-update {
+        display:none;
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        z-index: 999;
+      }
+      .app-update.show {
+        display: block;
+      }
+    </style>
   </head>
   <body>
     <div id="app-root"></div>
